--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.2"
 services:
     app:
       build: ./
-      command: npm test #or can be npm run test ?
+      #command: npm test #or can be npm run test ?
       volumes:
         - ./:/var/www/app 
       ports:
