--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.2"
 services:
-    app:
+    test:
       build: ./
-      #command: npm test #or can be npm run test ?
+      command: npm test #or can be npm run test ?
       volumes:
         - ./:/var/www/app 
       ports:
