--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,7 +12,7 @@ jobs:
     name: Running Unit Tests
     runs-on: ubuntu-latest
     env:
-      COMPOSE_FILE: ../../docker-compose.yml
+      COMPOSE_FILE: ./docker-compose.yml
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
